media-screen 320px adapted

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 Use the force sensor to easily control music and calls, and switch between Active Noise Cancellation and Transparency mode.
             </p>
             <img src="./img/rectangle.png" alt="">
-            <img src="./img/pods3.png" alt="">
+            <img class="desc__item-img3" src="./img/pods3.png" alt="">
             <img src="./img/rectangle.png" alt="">
             <p class="desc__design-p">
                 Designed to keep up with you, AirPods Pro are sweat and water resistant,1 and they feature an expanded mesh microphone port that improves call clarity in windy situations.
